--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@
   height: 80px;
 }
 
-.App-header {
-  background-color: #222;
+#App-header {
+  background-color: #ffffff;
   height: 150px;
   padding: 20px;
   color: white;
@@ -16,6 +16,10 @@
 
 .App-intro {
   font-size: large;
+}
+
+#App App-body {
+  background-color: #000000;
 }
 
 @keyframes App-logo-spin {
